fix collapsing right bar dimensions

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -67,9 +67,9 @@ a
   padding-right: 30px
 
 .right-panel
-  max-width: 403px
+  max-width: 400px
   vertical-align: top
-  width: 34%
+  width: 30%
   margin-left: 30px
 
 .siteunder
